--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="main.js"></script>
 
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
         <a class="navbar-brand" href="index.html">Bootcamp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,14 +82,10 @@
         </div>
     </nav>
 
-    <div class="containter">
-        <div class="row">
-            <div style="text-align: center; margin-top:250px;" class="col"><p id="pp"></p>Pretend like there's some cool stuff on display here
-            </div>
-        </div>
-    </div>
 
-    <script src="main.js"></script>
+    <p>Pretend like there's some cool stuff on
+        display here. Will make site prettier after/if I manage to do the local storage Javascript part first</p>
+        
 
 </body>
 
