--- a/AddAssignmentPerCourse.html
+++ b/AddAssignmentPerCourse.html
@@ -12,12 +12,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="main.js"></script>
 
 </head>
 
-<body>
+<body onload="AddToPerCourse()">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
         <a class="navbar-brand" href="index.html">Bootcamp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -92,8 +93,8 @@
             </div>
             <div class="form-group">
                 <label for="InputAssignmentTitle">Assignment Title</label>
-                <input type="text" class="form-control" id="InputAssignmentTitle" placeholder="Enter Assignment Title" required
-                    pattern="[a-zA-Z0-9]+">
+                <input type="text" class="form-control" id="InputAssignmentTitle" placeholder="Enter Assignment Title"
+                    required pattern="[a-zA-Z0-9]+">
             </div>
             <div class="form-group">
                 <label for="InputDescription">Description</label>
@@ -116,8 +117,6 @@
             <button type="reset" class="btn btn-primary">Clear</button>
         </form>
     </div>
-
-    <script src="main.js"></script>
 
 </body>
 
