--- a/TrainerList.html
+++ b/TrainerList.html
@@ -12,12 +12,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="main.js"></script>
 
 </head>
 
-<body>
+<body onload="AddToTrainerList()">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
         <a class="navbar-brand" href="index.html">Bootcamp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,8 +82,8 @@
         </div>
     </nav>
 
-    <div class="table-responsive-sm .overflow-auto mytable">
-        <table class="table table-striped table-secondary">
+    <div class="mytable table-responsive">
+        <table class="table table-striped table-warning">
             <div class="table-head">Trainers</div>
 
             <thead class="table-info">
@@ -90,7 +91,7 @@
                 <th scope="col">Lase Name</th>
                 <th scope="col">Subject</th>
             </thead>
-            <tbody>
+            <tbody id="TrainerList">
                 <tr>
                     <td>Placeholder</td>
                     <td>Placeholder</td>
@@ -157,8 +158,6 @@
             </div>
         </div>
     </div>
-
-    <script src="main.js"></script>
 
 </body>
 
